syntax="proto3";
option  java_multiple_files = true;

option java_package="com.bilgeadam.proto";

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string message = 1;
}

service EcommerceService {
  rpc greeting(GreetingRequest) returns(GreetingResponse);
}